--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,20 @@
 @import "tailwindcss";
 
 body {
-  background: black;
+  background: #1e2939;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+@media print {
+  .print {
+    width: 100% !important;
+    height: 100vh !important;
+    display: grid !important;
+    grid-template-columns: 1fr !important;
+    grid-template-rows: 1fr !important;
+    place-items: center !important;
+    justify-content: center !important;
+    align-items: center !important;
+    flex-direction: column !important;
+  }
 }
